<resources>
    <string name="app_name">NewsApp</string>
    <string name="search">search</string>
    <string name="date">Date</string>
    <string name="Sort">Sort</string>
    <string name="Category">Category</string>
    <string name="Arts">Arts</string>
    <string name="fashion"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="save">SAVE</string>


    <string name="sort_prompt">Sort Order</string>
    <string name="descriptionAlone">description</string>
    <string name="headlineAlone">headlineAlone</string>
    <string name="description">description</string>
    <string name="headline">headline</string>

    <string-array name="sort_arrays">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
</resources>
